# VertexCover_CNFSAT_

./: CMakeLists.txt  Driver.cpp  GenVEFromRgen.py  README.md  SPandVC.cpp  compareStreet.py  intersection.py  rgen.cpp
minisat/minisat/core/: SolverTypes.h
minisat/minisat/utils/: Options.h
